--- a/src/App.css
+++ b/src/App.css
@@ -43,46 +43,9 @@
 
 
 
-.main-divfacebook {
-  border: 1px solid black;
-  background-color: rgb(87, 87, 252);
-  color: aliceblue;
-  border-radius: 10px;
-  padding: 1rem;
-  width: 300px;
-  max-height: 500px;
-  margin-right: 5px;
-  margin-top: 10px;
-}
-.main-divinstagram {
-  border: 1px solid black;
-  background-color: rgb(255, 32, 88);
-  color: aliceblue;
-  border-radius: 10px;
-  padding: 1rem;
-  width: 300px;
-  max-height: 500px;
-  margin-right: 5px;
-  margin-top: 10px;
-}
-
-
-.main-divtiktok {
-  border: 1px solid black;
-  background-color: white;
-  color: rgb(12, 12, 12);
-  border-radius: 10px;
-  padding: 1rem;
-  width: 300px;
-  max-height: 500px;
-  margin-right: 5px;
-  margin-top: 10px;
-
-}
-.main-div{
+/* .main-div{
 display: flex;
 justify-content: space-between;
 align-items: center;
 flex-direction: row;
-
-}
+} */
